day-9/first-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    name: giropops-senhas
spec:
  ingressClassName: nginx
  rules:
  - host: giropops.matheussilveira.dev
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: giropops-senhas
            port: 
              number: 5000
